# openclaw-claude-code-enhancement-pack

./: .gitignore  README.md  SKILL.md  manifest.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
docs/: Architecting-An-Enhancement-Pack.md  CHANGELOG.md  Openclaw-Claude-Code-Enhancement-Pack-Integration-Checklist.md  Openclaw-Claude-Code-Enhancement-Pack-Manifest-Draft.md  Openclaw-Claude-Code-Enhancement-Pack-Repository-Scaffold.md  README.md  openclaw-claude-code-enhancement-pack-repo-init.md
rust_bridge/: Cargo.toml
rust_bridge/src/: lib.rs
scripts/: __init__.py  audit.py  bootstrap.py  release.py
sessions/: 898a56c9-52c0-4616-9c88-8fab367364c3.json
src/: __init__.py  __main__.py  bootstrap.py  codeflow.py  compat.py  pack.py  prompts.py  runtime.py  session.py  tools.py
tests/: test_compat.py  test_manifest.py
