[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw-claude-code-enhancement-pack"
version = "0.1.0"
description = "Claude Code-style enhancement pack for OpenClaw"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Clark"}]
dependencies = []

[project.optional-dependencies]
rust = []
dev = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
